@@ -2,6 +2,7 @@ class: 'EBox::DHCP'
 
 depends:
     - network
+    - samba
 
 enabledepends:
     - network
