@@ -1,4 +1,5 @@
 6.1
+	+ Fix Dynamic DNS updates
 	+ Set version to 6.1
 6.0
 	+ Set version to 6.0
